tests/ui/type/type-check/issue-40294.stderr
error[E0283]: type annotations needed: cannot satisfy `&T: Foo`
  --> $DIR/issue-40294.rs:9:7
   |
LL |     x.foo();
   |       ^^^
   |
note: multiple `impl`s or `where` clauses satisfying `&T: Foo` found
  --> $DIR/issue-40294.rs:6:19
   |
LL |     where &'a T : Foo,
   |                   ^^^
LL |           &'b T : Foo
   |                   ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
